--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:fillViewport="true"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,8 +70,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:backgroundTint="@color/connect_dark_blue_color"
                     android:elevation="5dp"
@@ -154,16 +154,6 @@
                         android:background="@color/connect_blue_color_10"
                         android:padding="16dp">
 
-                        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-                            android:id="@+id/connectRegularTextView2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/connect_progress"
-                            android:textColor="@color/connect_dark_blue_color"
-                            android:textSize="15sp"
-                            app:layout_constraintBottom_toTopOf="@+id/connectRegularTextView"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
 
                         <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                             android:id="@+id/connectRegularTextView"
@@ -174,7 +164,7 @@
                             android:textSize="15sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/connectRegularTextView2" />
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <org.commcare.views.connect.RoundedButton
                             android:id="@+id/btnSync"
